src/objects/PFLSFTMA__TMA_Workflow_Rule__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>PFLSFTMA__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Assigned_To_Type__c</fullName>
        <label>Assigned To Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Due_Date_Offset__c</fullName>
        <label>Due Date Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Filter_Field__c</fullName>
        <label>Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Filter_Operation__c</fullName>
        <label>Filter Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_ID__c</fullName>
        <label>Touch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Name__c</fullName>
        <label>Touch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Ignore_If_Auto_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore If Auto Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Metadata_Message__c</fullName>
        <label>Metadata Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Notify_Assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Assignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Offset_From_Field__c</fullName>
        <label>Offset From Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Offset_Multiplier__c</fullName>
        <label>Offset Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Post_Install_Inserted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Install Inserted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Rules_Description__c</fullName>
        <label>Rules Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Task_Description__c</fullName>
        <label>Task Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Task_Name__c</fullName>
        <label>Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Trigger_Type__c</fullName>
        <label>Trigger Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__formula__c</fullName>
        <label>formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TMA Workflow Rule</label>
</CustomObject>